kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/option.k
pub type Option(T: Type) {
    .none(T: Type): Option(T),
    .some(T: Type, t: T): Option(T),
}
