kanc/src/tests/sample_code/should_fail/single_file/bind/ref_variant_in_variant_return_type.k
type U {
    u: U,
}

type Bar(T: Type, x: T) {
    b: Bar(Bar(U, U.u), Bar.b),
}
